fixes vf-figure alignment inside vf-content

--- a/components/vf-content/vf-content.scss
+++ b/components/vf-content/vf-content.scss
@@ -169,11 +169,11 @@
     margin-bottom: 32px;
   }
 
-  .vf-figure--float-inline-start {
+  .vf-figure--align-inline-start {
     margin-bottom: 32px;
     margin-right: 32px;
   }
-  .vf-figure--float-inline-end {
+  .vf-figure--align-inline-end {
     margin-bottom: 32px;
     margin-left: 32px;
   }
